<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gdpr_privacy_policy_home">
        By signing in you agree to <a href="https://sites.google.com/view/datacluster/terms-and-conditions">Terms &amp; Conditions</a> and <a href="https://sites.google.com/view/datacluster/privacy-policy">Privacy Policy</a>
    </string>
    <string name="NameFilter">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ </string>
    <string name="app_name">justgiveitfree</string>
    <string name="title_search">Αναζήτηση</string>
    <string name="title_messages">Μηνύματα</string>
    <string name="title_share">Μοιράσου</string>
    <string name="title_profile">Προφίλ</string>
    <string name="ok">OK</string>
    <string name="cancel">Ακύρωση</string>
    <string name="first_name">Ονομα</string>
    <string name="last_name">Επώνημο</string>
    <string name="verification">Επαλήθευση</string>
    <string name="you_will_get_sms_with_a_confirmation_code_to_this_number">Θα λάβεις ενα sms με τον κωδικό επαλήθευσης</string>
    <string name="please_input_code_below">Παρακαλώ εισάγεται τον κωδικό</string>
    <string name="continueText">Συνέχεια</string>
    <string name="waiting_for_otp">Αναμονή για αυτόματη επαλήθευση</string>
    <string name="title_activity_pick_up_location">Χάρτης</string>
    <string name="upload_success_image">Ανέβηκε επιτυχώς </string>
    <string name="upload_failure">Αποτυχία</string>
    <string name="progress_uploading">Προδος μεταφόρτωσης</string>
    <string name="share">Μοιράσου</string>
    <string name="request">Αίτημα</string>
    <string name="enter_item_name">Enter Item name</string>
    <string name="enter_item_short_description">Enter Item Short Description</string>
    <string name="category">Category</string>
    <string name="photos">Photos</string>
    <string name="pick_image">Pick image</string>
    <string name="submit">Submit</string>
    <string name="write_a_message">Write a message</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="share_items">Share Items</string>
    <string name="no_item_found">No Item Found</string>
    <string name="next">NEXT</string>
    <string name="select_search_area_radius">Select Search Area Radius</string>
    <string name="done">Done</string>
    <string name="show_all">Show All</string>
    <string name="choose_category">Choose category</string>
    <string name="no_message_found">No message Found</string>
    <string name="edit_requested_items">Edit Requested Items</string>
    <string name="edit_share_items">Edit Share Items</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="user_profile">User Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_pickup_location">Edit PickUp Location</string>
    <string name="my_item_list">My item list</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="email">Email</string>
    <string name="profile_update">Profile Update</string>
    <string name="welcome_to_share_items">Welcome To  Share Items</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="delete">Delete</string>
    <string name="completed">Completed</string>
    <string name="send_message_to_owner">Send Message to Owner</string>
    <string name="would_u_like_to_send_owner_message_letting_him_know_you_are_intrested_in_this_item">Would u like to send owner message letting him know you are intrested in this item</string>
    <string name="send">Send</string>
    <string name="sign_in_or_sign_up">Sign in or Sign Up</string>
    <string name="your_must_login_in_before_viewing_this_page">Your must login in before viewing this page</string>
    <string name="sign_in_sign_up">Sign In/ Sign up</string>
    <string name="sure_delete_this_item">Are sure you want to delete this item</string>
    <string name="yes">Yes</string>
    <string name="sure_logout">Do you want to logout</string>
    <string name="got_it">GOT IT</string>
    <string name="not_one_found">No one found</string>
    <string name="select_person">\"Select person \"</string>
    <string name="select_reciver">Select receiver</string>
    <string name="my_favourite">My Favourite</string>
    <string name="select_condition">Select Item condition</string>
    <string name="pick_from">Pick From</string>
</resources>