<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#F5F5F5"
    app:cardCornerRadius="@dimen/size40">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/themColorGreen"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/size30"
                android:text="@string/sign_in_or_sign_up"
                android:textColor="@color/weight"
                android:textSize="@dimen/ts38" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:gravity="center"
            android:text="@string/your_must_login_in_before_viewing_this_page"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size30"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size12"
                android:layout_weight="1"
                android:backgroundTint="@color/themColorRed"
                android:text="@string/cancel"
                android:textColor="@color/weight"
                android:visibility="visible"
                app:cornerRadius="@dimen/size40" />

            <Button
                android:id="@+id/Approve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size12"
                android:layout_weight="1"
                android:backgroundTint="@color/themColorGreen"
                android:text="@string/sign_in_sign_up"
                android:textColor="@color/weight"
                android:visibility="visible"
                app:cornerRadius="@dimen/size40" />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
