<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_200"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/cortes" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/welcome_to_share_items"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/sign_in_to_continue"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/blue_grey_300" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/blue_grey_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="5dp">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    app:ccp_showFlag="false"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_showFullName="false"
                    app:ccp_showNameCode="false">

                </com.hbb20.CountryCodePicker>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:ems="10"
                    android:inputType="phone"
                    android:maxLength="12"
                    android:paddingStart="5dp"
                    android:theme="@style/EditText.Green" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorPrimary" />


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_xlarge" />

            <TextView
                android:id="@+id/phoneLogin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:background="@drawable/new_back_button_ui"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/ColorGrey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:text="@string/or" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/ColorGrey" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

            <LinearLayout
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/new_back_button_ui"
                android:paddingStart="@dimen/padding_10"
                android:paddingEnd="@dimen/padding_10">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_google_icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="36dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/login_with_google"
                    android:textColor="@color/ColorWeight"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/spacing_large">

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/gdpr_privacy_policy_home"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_60"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>