<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/weight"
    app:cardCornerRadius="@dimen/size40"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/themColorGreen"
                android:padding="@dimen/size30"
                android:textColor="@color/weight"
                android:textSize="@dimen/ts38"
                android:visibility="visible" />
        </LinearLayout>

        <Switch
            android:id="@+id/allFaculties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/show_all"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size20"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size20"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/ts36" />

                <NumberPicker
                    android:id="@+id/picker_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </NumberPicker>
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="0 Km" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size30"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size12"
                android:layout_weight="1"
                android:backgroundTint="@color/themColorRed"
                android:text="@string/cancel"
                android:textColor="@color/weight"
                android:visibility="visible"
                app:cornerRadius="@dimen/size40" />

            <Button
                android:id="@+id/Approve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size12"
                android:layout_weight="1"
                android:backgroundTint="@color/themColorGreen"
                android:text="@string/ok"
                android:textColor="@color/weight"
                android:visibility="visible"
                app:cornerRadius="@dimen/size40" />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
