<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:src="@drawable/ic_arrow_back_black_50dp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_xlarge"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verification"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textStyle="bold" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:text="@string/you_will_get_sms_with_a_confirmation_code_to_this_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:layout_marginBottom="@dimen/spacing_large"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:text="+91"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_60"
                android:textStyle="bold"
                android:visibility="gone" />

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_60"
                android:textStyle="bold" />


            <ImageButton
                android:layout_width="@dimen/spacing_xmlarge"
                android:layout_height="@dimen/spacing_xmlarge"
                android:background="@android:color/transparent"
                android:tint="@color/green_400"
                app:srcCompat="@drawable/ic_check_circle" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:gravity="center"
            android:text="@string/please_input_code_below"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#050505"
            app:bar_enabled="true"
            app:bar_height="2dp"
            app:height="60dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomCodeVerify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PageDetails"
            app:length="6"
            app:otp_text_size="24dp"
            app:width="40dp" />

        <TextView
            android:id="@+id/tv_coundown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_60" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_red"
            android:text="@string/continueText"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resendButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="RESEND CODE"
            android:textColor="@color/grey_40"
            android:visibility="gone" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />

    </LinearLayout>

</LinearLayout>